--- a/src/main/resources/Messages_en_US.properties
+++ b/src/main/resources/Messages_en_US.properties
@@ -1,2 +1,13 @@
 money = Money
 date = Date
+greet = Hello
+logout = Logout
+chatroom = Chat Room
+viewcart = View Cart
+bookstore = BookStore
+storeinfo = This is an online bookstore. You can buy whatever you like here.\
+percenter = Admin Center
+addCart = Add To Cart
+viewInfo = View Info
+search = search
+searchHint = Input BookName
