--- a/src/main/resources/Messages_zh_CN.properties
+++ b/src/main/resources/Messages_zh_CN.properties
@@ -1,2 +1,13 @@
 money = \u91d1\u94b1
 date = \u65e5\u671f
+greet = \u4f60\u597d
+logout = \u767b\u51fa
+chatroom = \u804a\u5929\u5ba4
+viewcart = \u8d2d\u7269\u8f66
+bookstore = \u7f51\u4e0a\u4e66\u5e97
+storeinfo = \u8fd9\u91cc\u662f\u7f51\u4e0a\u4e66\u5e97\uff0c\u4f60\u53ef\u4ee5\u8d2d\u4e70\u559c\u7231\u7684\u56fe\u4e66
+percenter = \u7ba1\u7406\u4e2d\u5fc3
+addCart = \u52a0\u5165\u8d2d\u7269\u8f66
+viewInfo = \u67e5\u770b\u8be6\u60c5
+search = \u641c\u7d22
+searchHint = \u8f93\u5165\u4e66\u540d
