--- a/src/main/resources/Messages_zh_CN.properties
+++ b/src/main/resources/Messages_zh_CN.properties
@@ -1,6 +1,6 @@
 money = \u91d1\u94b1
 date = \u65e5\u671f
-greet = \u4f60\u597d
+greet = \u8bf7\u767b\u5f55
 logout = \u767b\u51fa
 chatroom = \u804a\u5929\u5ba4
 viewcart = \u8d2d\u7269\u8f66
@@ -11,3 +11,16 @@ addCart = \u52a0\u5165\u8d2d\u7269\u8f66
 viewInfo = \u67e5\u770b\u8be6\u60c5
 search = \u641c\u7d22
 searchHint = \u8f93\u5165\u4e66\u540d
+login = \u767b\u5f55
+reset = \u91cd\u7f6e
+email = \u8d26\u53f7
+password = \u5bc6\u7801
+userCenter = \u4e2a\u4eba\u4e2d\u5fc3
+category = \u56fe\u4e66\u5206\u7c7b
+literature = \u6587\u5b66
+science = \u79d1\u5b66
+novel = \u5c0f\u8bf4
+fiction = \u79d1\u5e7b
+IT = IT
+biography = \u4f20\u8bb0
+all = \u5168\u90e8
