--- a/src/main/resources/Messages_en_US.properties
+++ b/src/main/resources/Messages_en_US.properties
@@ -1,13 +1,26 @@
 money = Money
 date = Date
-greet = Hello
+greet = Please Sign in
 logout = Logout
 chatroom = Chat Room
 viewcart = View Cart
 bookstore = BookStore
-storeinfo = This is an online bookstore. You can buy whatever you like here.\
+storeinfo = This is an online bookstore. You can buy whatever you like here.
 percenter = Admin Center
 addCart = Add To Cart
 viewInfo = View Info
 search = search
 searchHint = Input BookName
+login = Sign in
+reset = Reset
+email = Account
+password = Password
+userCenter = Center
+category = category
+literature = literature
+science = science
+novel = novel
+fiction = fiction
+IT = IT
+biography = biography
+all = all
