--- a/src/main/resources/Messages_en_US.properties
+++ b/src/main/resources/Messages_en_US.properties
@@ -15,7 +15,7 @@ login = Sign in
 reset = Reset
 email = Account
 password = Password
-userCenter = Center
+userCenter = User Center
 category = category
 literature = literature
 science = science
@@ -24,3 +24,52 @@ fiction = fiction
 IT = IT
 biography = biography
 all = all
+mainpage = main page
+welcome = Welcome to Online Bookstore
+close = close
+bookinfo = Book Information
+shoppingcart = shopping cart
+carthello = 's Shopping Cart
+bookid = ID
+bookdescr = Description
+bookname = Name
+bookauthor = Author
+bookstock = Stock
+bookprice = Price
+bookquan = Amount
+submitcart = Submit Cart
+resetcart = Reset Cart
+back = Back To MainPage
+searchtitle = Search Result
+orderprocess = Order Processing
+orderdetails = Order Details
+orderconfirm = Please confirm the order information
+ordercode = Order Code
+buyername = Buyer Name
+buyeraddr = Buyer Address
+pay = Pay For It
+personinfo = Person Information
+sex = Sex
+address = Address
+phone = Phone Number
+save = Save Changes
+submitted = Submitted
+paid = Paid
+refused = Refused
+accepted = Accepted
+canceled = Canceled
+orderprice = Order Price
+ordertime = Order Created Time
+orderstatus = Order Status
+operation = Operation
+viewdetails = View Details
+cancelOrder = Cancel Order
+procenter = Producer Center
+ordermanage = Order Management
+promanage = Product Management
+userid = User ID
+proid = Producer ID
+accept = Accept
+refuse = Refuse
+bookstatus = isOnMarket
+market = PutOnMarket
