--- a/src/main/resources/Messages_zh_CN.properties
+++ b/src/main/resources/Messages_zh_CN.properties
@@ -24,3 +24,51 @@ fiction = \u79d1\u5e7b
 IT = IT
 biography = \u4f20\u8bb0
 all = \u5168\u90e8
+mainpage = \u4e66\u5e97\u9996\u9875
+welcome = \u6b22\u8fce\u6765\u5230\u7f51\u4e0a\u4e66\u57ce
+close = \u5173\u95ed
+bookinfo = \u4e66\u7c4d\u8be6\u60c5
+shoppingcart = \u8d2d\u7269\u8f66
+carthello = \u7684\u8d2d\u7269\u8f66
+bookid = \u7f16\u53f7
+bookdescr = \u8be6\u60c5
+bookname = \u4e66\u540d
+bookauthor = \u4f5c\u8005
+bookstock = \u5e93\u5b58
+bookprice = \u5355\u4ef7
+bookquan = \u6570\u91cf
+submitcart = \u63d0\u4ea4\u8d2d\u7269\u8f66
+resetcart = \u6e05\u7a7a\u8d2d\u7269\u8f66
+back = \u8fd4\u56de\u4e66\u57ce
+searchtitle = \u641c\u7d22\u7ed3\u679c
+orderprocess = \u8ba2\u5355\u5904\u7406
+orderdetails = \u8ba2\u5355\u8be6\u60c5
+orderconfirm = \u8bf7\u786e\u8ba4\u8ba2\u5355\u4fe1\u606f
+ordercode = \u8ba2\u5355\u7f16\u53f7
+buyername = \u4e70\u5bb6\u59d3\u540d
+buyeraddr = \u4e70\u5bb6\u5730\u5740
+pay = \u7acb\u5373\u8d2d\u4e70
+personinfo = \u4e2a\u4eba\u4fe1\u606f
+sex = \u6027\u522b
+address = \u5730\u5740
+phone = \u624b\u673a\u53f7
+save = \u4fdd\u5b58\u4fee\u6539
+submitted = \u5df2\u63d0\u4ea4
+paid = \u5df2\u4ed8\u6b3e
+refused = \u5df2\u62d2\u7edd
+accepted = \u5df2\u53d1\u8d27
+canceled = \u5df2\u53d6\u6d88
+orderprice = \u8ba2\u5355\u4ef7\u683c
+ordertime = \u8ba2\u5355\u521b\u5efa\u65f6\u95f4
+orderstatus = \u8ba2\u5355\u72b6\u6001
+operation = \u64cd\u4f5c
+viewdetails = \u67e5\u770b\u8be6\u60c5
+cancelOrder = \u53d6\u6d88\u8ba2\u5355
+procenter = \u9500\u552e\u5546\u7ba1\u7406\u4e2d\u5fc3
+ordermanage = \u8ba2\u5355\u7ba1\u7406
+promanage = \u8d27\u54c1\u7ba1\u7406
+userid = \u7528\u6237\u7f16\u53f7
+proid = \u9500\u552e\u5546\u7f16\u53f7
+accept = \u53d1\u8d27
+refuse = \u62d2\u7edd
+bookstatus = \u662f\u5426\u5728\u552e
