--- a/src/main/resources/Messages_en_US.properties
+++ b/src/main/resources/Messages_en_US.properties
@@ -73,3 +73,14 @@ accept = Accept
 refuse = Refuse
 bookstatus = isOnMarket
 market = PutOnMarket
+nomarket = PutDownMarket
+delete = Delete
+admincenter = Admin Center
+adduser = Add User
+uname = UserName
+pass = Password
+role = Role
+usermana = User Management
+man = Man
+woman = Woman
+main = This is online bookstore which is a project for enterprise development class. Use SSM framework to implement main structure, adding Spring Shiro to implement verification and authorization. Use ActiveMQ to process orders and websocket to make a chatroom. Spring-data-redis is used to cache book information. Use Apache Lucene to implement full text search.
